# frame-check

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE.md  README.md  SPRINT.md  column_dependency.py  conftest.py  enter.py  example.ast  example.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  test.py  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  default-request.md  feature-request.md
.github/workflows/: ci.yml  docs.yml
crates/frame-check-core/: Cargo.toml
crates/frame-check-core/src/: main.rs
docs/: editor.md  index.md
docs/contributing/: adding-dataframe-method.md  adding-extractor.md  adding-pandas-function.md  index.md
docs/features/: index.md
docs/stylesheets/: extra.css
editor/: index.html
features/: index.html
features/column_assignment_methods/: index.html
features/column_removal_methods/: index.html
features/dataframe_creation_methods/: index.html
features/edge_cases/: index.html
frame-check-core/: README.md  pyproject.toml
frame-check-core/scripts/: features.toml
frame-check-core/src/frame_check_core/: __init__.py  _ast.py  _calls.py  _col_similarity.py  _message.py  _models.py  checker.py  formatting.py  frame_checker.py  refs.py  tracker.py
frame-check-core/src/frame_check_core/ast/: __init__.py  dataframe.py  dfnode.py  meta.py  method.py  models.py  pandas.py
frame-check-core/src/frame_check_core/config/: __init__.py  config.py  paths.py
frame-check-core/src/frame_check_core/dev/: frame.py
frame-check-core/src/frame_check_core/diagnostic/: __init__.py
frame-check-core/src/frame_check_core/extractors/: __init__.py  binop.py  column.py  registry.py
frame-check-core/src/frame_check_core/handlers/: dataframe.py  models.py  pandas.py
frame-check-core/src/frame_check_core/models/: diagnostic.py  history.py  region.py  source.py
frame-check-core/src/frame_check_core/util/: col_similarity.py  column.py  message.py
frame-check-core/tests/: conftest.py  test_call.py  test_check_method.py  test_checker.py  test_column_assignement.py  test_column_assignment.py  test_config.py  test_diagnostic_output.py  test_diagnostics.py  test_frame_history.py  test_frame_init.py  test_frame_instance.py  test_import.py  test_paths.py  test_read_csv.py  test_similarity.py
frame-check-core/tests/bench/: long_pandas.py  test_bench_core.py
frame-check-core/tests/config/: test_config.py  test_paths.py
frame-check-core/tests/data/: csv_file.csv
frame-check-core/tests/diagnostic/: test_formatting.py  test_output.py
frame-check-core/tests/extractors/: test_binop.py  test_column.py  test_registry.py
frame-check-core/tests/features/: test_column_assignment_methods.py  test_dataframe_creation_methods.py
frame-check-core/tests/util/: test_similarity.py
frame-check-extensions/vscode/: .gitignore  .vscodeignore  DEVELOPMENT.md  README.md  build.sh  install-dev.sh  package-lock.json  package.json  tsconfig.json
frame-check-extensions/vscode/src/: extension.ts
frame-check-extensions/vscode/test-examples/: dataframe_test.py
frame-check-extensions/zed/: Cargo.toml  extension.toml
frame-check-extensions/zed/src/: frame_check.rs
frame-check-lsp/: README.md  pyproject.toml
frame-check-lsp/src/frame_check_lsp/: __init__.py
scripts/: enter.ps1  enter.sh  features.toml  gen_features.py
search/: search_index.json
summary/: index.html
