[project]
name = "frame-check"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "frame-check-core",
    "frame-check-lsp",
]

[tool.uv.workspace]
members = [
    "frame-check-core",
    "frame-check-lsp",
]

[tool.uv.sources]
frame-check-core = { workspace = true }
frame-check-lsp = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "pandas>=2.3.2",
]
