[project]
name = "frame-check"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "frame-check-core",
    "frame-check-lsp",
]

[tool.uv.workspace]
members = [
    "frame-check-core",
    "frame-check-lsp",
]

[tool.uv.sources]
frame-check-core = { workspace = true }
frame-check-lsp = { workspace = true }


[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "mypy>=1.18.2",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "types-psutil>=7.0.0.20250822",
]
docs = [
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
]

[tool.pyright]
typeCheckingMode = "basic"
