[project]
name = "frame-check"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "frame-check-core",
    "frame-check-lsp",
]

[tool.uv.workspace]
members = [
    "frame-check-core",
    "frame-check-lsp",
]

[tool.uv.sources]
frame-check-core = { workspace = true }
frame-check-lsp = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "mypy>=1.18.2",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-codspeed>=4.1.1",
    "tabulate>=0.9.0",
    "types-psutil>=7.0.0.20250822",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
exclude =['frame-check-extensions']
